"""
kero_log
"""

module(name = "kero_log", version = "0.1.0")

bazel_dep(name = "googletest", version = "1.14.0")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
)

KERO_MPSC_VERSION = "0.9.0"
bazel_dep(name = "kero_mpsc", version = KERO_MPSC_VERSION)
archive_override(
    module_name = "kero_mpsc",
    urls = ["https://github.com/oneofthezombies/kero-mpsc/archive/refs/tags/v" + KERO_MPSC_VERSION + ".zip"],
    strip_prefix = "kero-mpsc-" + KERO_MPSC_VERSION,
)
